Change title and content for birthday celebration
Updated the title and some content for the birthday celebration.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Website Ulang Tahun Interaktif</title>
+    <title>Selamat Ulang Tahun Ejes</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,4 +105,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
